[package]
name = "crypto-hash"
version = "0.3.3"
authors = ["Mark Lee"]
description = "A wrapper for OS-level cryptographic hash functions"
documentation = "https://docs.rs/crypto-hash"
repository = "https://github.com/malept/crypto-hash"
readme = "README.md"
keywords = ["crypto", "hash", "digest"]
license = "MIT"
exclude = [
    ".*.yml",
    "ci/*"
]

[badges]
travis-ci = { repository = "malept/crypto-hash" }
appveyor = { repository = "malept/crypto-hash" }

[dependencies]
hex = "0.3"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
commoncrypto = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "wincrypt"] }

[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
openssl = "0.10"
