[package]
name = "crypto-hash"
version = "0.3.4"
authors = ["Mark Lee"]
description = "A wrapper for OS-level cryptographic hash functions"
documentation = "https://docs.rs/crypto-hash"
repository = "https://github.com/malept/crypto-hash"
readme = "README.md"
keywords = ["crypto", "hash", "digest"]
license = "MIT"
exclude = [
    ".*.yml",
    "ci/*"
]

[badges]
travis-ci = { repository = "malept/crypto-hash" }
appveyor = { repository = "malept/crypto-hash" }

[dependencies]
hex = "0.4"
commoncrypto = "0.2"
winapi = { version = "0.3", features = ["minwindef", "wincrypt"] }
openssl = "0.10"
